WeakObjCPtr.h is not safe to include in C++ source files <https://webkit.org/b/217712> <rdar://problem/70250667>

Reviewed by Darin Adler.

* wtf/WeakObjCPtr.h:
(WTF::WeakObjCPtr::get const):
- Move implementation outside of the class and wrap it in
  #ifdef __OBJC__/#endif.  This makes the header safe to compile
  with other C++ sources, but will fail if get() is used in a
  C++ source file.


Canonical link: https://commits.webkit.org/230506@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268543 268f45cc-cd09-0410-ab3c-d52691b4dbfc